# query-to-sql-llm-system

./: .dev.env  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
config/: settings.py
data/: northwind.txt
db/: database.py
presentation/: streamlit_app.py
prompts/: sql_prompts.py
services/: langchain_service.py
tests/: test_database.py  test_helpers.py  test_langchain_service.py
utils/: helpers.py
